{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 922,
  "lineage": "d1cfde19-1267-b320-9ab7-9da83ffcadfb",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.0.210.21",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-06-08T10:15:05.777-07:00",
            "id": "projects/basic-arch-384210/regions/europe-southwest1/addresses/my-lb-public-ip",
            "name": "my-lb-public-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "basic-arch-384210",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/addresses/my-lb-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/forwardingRules/my-lb-forwarding-rule"
            ]
          },
          "dependencies": [
            "module.mig.data.google_service_account.this",
            "module.mig.google_compute_autoscaler.default",
            "module.mig.google_compute_health_check.this",
            "module.mig.google_compute_instance_group_manager.this",
            "module.mig.google_compute_instance_template.this",
            "module.vpc.google_compute_network.this",
            "module.vpc.google_compute_subnetwork.proxy",
            "module.vpc.google_compute_subnetwork.public",
            "module.vpc.module.firewall.google_compute_firewall.allow_icmp",
            "module.vpc.module.firewall.google_compute_firewall.allow_internal_traffic",
            "module.vpc.module.firewall.google_compute_firewall.allow_server_port",
            "module.vpc.module.firewall.google_compute_firewall.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-06-08T10:16:03.318-07:00",
            "id": "projects/basic-arch-384210/regions/europe-southwest1/forwardingRules/my-lb-forwarding-rule",
            "ip_address": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/addresses/my-lb-public-ip",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "my-lb-forwarding-rule",
            "network": "projects/basic-arch-384210/global/networks/my-vpc",
            "network_tier": "STANDARD",
            "port_range": "8080",
            "project": "basic-arch-384210",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/forwardingRules/my-lb-forwarding-rule",
            "target": "projects/basic-arch-384210/regions/europe-southwest1/targetHttpProxies/my-lb-proxy"
          },
          "dependencies": [
            "module.lb.google_compute_address.this",
            "module.lb.google_compute_region_backend_service.this",
            "module.lb.google_compute_region_health_check.this",
            "module.lb.google_compute_region_target_http_proxy.this",
            "module.lb.google_compute_region_url_map.this",
            "module.mig.data.google_service_account.this",
            "module.mig.google_compute_autoscaler.default",
            "module.mig.google_compute_health_check.this",
            "module.mig.google_compute_instance_group_manager.this",
            "module.mig.google_compute_instance_template.this",
            "module.vpc.google_compute_network.this",
            "module.vpc.google_compute_subnetwork.proxy",
            "module.vpc.google_compute_subnetwork.public",
            "module.vpc.module.firewall.google_compute_firewall.allow_icmp",
            "module.vpc.module.firewall.google_compute_firewall.allow_internal_traffic",
            "module.vpc.module.firewall.google_compute_firewall.allow_server_port",
            "module.vpc.module.firewall.google_compute_firewall.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/zones/europe-southwest1-a/instanceGroups/my-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-06-08T10:15:17.576-07:00",
            "enable_cdn": false,
            "fingerprint": "AcqVMPrhEQ0=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/healthChecks/my-lb-health-check"
            ],
            "id": "projects/basic-arch-384210/regions/europe-southwest1/backendServices/my-lb-backend-service",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "my-lb-backend-service",
            "port_name": "server-port",
            "project": "basic-arch-384210",
            "protocol": "HTTP",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/backendServices/my-lb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.lb.google_compute_region_health_check.this",
            "module.mig.data.google_service_account.this",
            "module.mig.google_compute_autoscaler.default",
            "module.mig.google_compute_health_check.this",
            "module.mig.google_compute_instance_group_manager.this",
            "module.mig.google_compute_instance_template.this",
            "module.vpc.google_compute_network.this",
            "module.vpc.google_compute_subnetwork.proxy",
            "module.vpc.google_compute_subnetwork.public",
            "module.vpc.module.firewall.google_compute_firewall.allow_icmp",
            "module.vpc.module.firewall.google_compute_firewall.allow_internal_traffic",
            "module.vpc.module.firewall.google_compute_firewall.allow_server_port",
            "module.vpc.module.firewall.google_compute_firewall.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-08T10:15:39.382-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/backendServices/my-lb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Kx57ghYm0Io=",
            "host_rule": [],
            "id": "projects/basic-arch-384210/regions/europe-southwest1/urlMaps/my-lb-url-map",
            "map_id": -1171279276,
            "name": "my-lb-url-map",
            "path_matcher": [],
            "project": "basic-arch-384210",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/urlMaps/my-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.google_compute_region_backend_service.this",
            "module.lb.google_compute_region_health_check.this",
            "module.mig.data.google_service_account.this",
            "module.mig.google_compute_autoscaler.default",
            "module.mig.google_compute_health_check.this",
            "module.mig.google_compute_instance_group_manager.this",
            "module.mig.google_compute_instance_template.this",
            "module.vpc.google_compute_network.this",
            "module.vpc.google_compute_subnetwork.proxy",
            "module.vpc.google_compute_subnetwork.public",
            "module.vpc.module.firewall.google_compute_firewall.allow_icmp",
            "module.vpc.module.firewall.google_compute_firewall.allow_internal_traffic",
            "module.vpc.module.firewall.google_compute_firewall.allow_server_port",
            "module.vpc.module.firewall.google_compute_firewall.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/basic-arch-384210/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "basic-arch-384210",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-08T10:13:44.777-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/basic-arch-384210/regions/europe-southwest1/subnetworks/my-proxy-subnet-0",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "my-proxy-subnet-0",
            "network": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "basic-arch-384210",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "europe-southwest1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/subnetworks/my-proxy-subnet-0"
          },
          "dependencies": [
            "module.vpc.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-08T10:13:44.680-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/basic-arch-384210/regions/europe-southwest1/subnetworks/my-public-subnet-0",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "my-public-subnet-0",
            "network": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "basic-arch-384210",
            "purpose": "PRIVATE",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/regions/europe-southwest1/subnetworks/my-public-subnet-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-08T10:13:44.064-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/basic-arch-384210/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc",
            "priority": 1000,
            "project": "basic-arch-384210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-06-08T10:13:43.967-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/basic-arch-384210/global/firewalls/allow-internal-traffic",
            "log_config": [],
            "name": "allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc",
            "priority": 1000,
            "project": "basic-arch-384210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/firewalls/allow-internal-traffic",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_server_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-08T10:13:43.970-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/basic-arch-384210/global/firewalls/allow-web-server",
            "log_config": [],
            "name": "allow-web-server",
            "network": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc",
            "priority": 1000,
            "project": "basic-arch-384210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/firewalls/allow-web-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-08T10:13:43.964-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/basic-arch-384210/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/networks/my-vpc",
            "priority": 1000,
            "project": "basic-arch-384210",
            "self_link": "https://www.googleapis.com/compute/v1/projects/basic-arch-384210/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.this"
          ]
        }
      ]
    }
  ]
}